noinst_LIBRARIES = libvpnes.a
libvpnes_a_SOURCES = aputables.cpp ines.cpp libvpnes.cpp \
	mappers/axrom.cpp \
	mappers/cnrom.cpp \
	mappers/mmc1.cpp \
	mappers/mmc3.cpp \
	mappers/mmc5.cpp \
	mappers/nrom.cpp \
	mappers/uxrom.cpp
noinst_HEADERS = apu.h aputables.h bus.h clock.h cpu.h frontend.h ines.h libvpnes.h \
                 manager.h mapper.h nbuild.h nes.h ppu.h \
	mappers/axrom.h \
	mappers/cnrom.h \
	mappers/mmc1.h \
	mappers/mmc3.h \
	mappers/mmc5.h \
	mappers/nrom.h \
	mappers/uxrom.h
